--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center>
 <h1 style="color:Tomato;"</h1> The Beauty Of Flowers</h1>
 <p style="color:Green;">These flowers gives a natural beauty on every houses.</p>
-<img src="img_chania.jpg" alt="Flowers in Chania">
+<img src="images/im.jpg" alt="Flowers in Chania">
  
 </html>
 
