--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>hay nako</title>
 </head>
 <body style='background-color:Pink;'>
 <center>
