--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body style='background-color:Pink;'>
 <center>
 <h1 style="color:Tomato;"</h1> The Beauty Of Flowers</h1>
+<p>Jofemyzyl Gomerez</p>
 <p style="color:Green;">These flowers gives a natural beauty on every houses.</p>
 <img src="images/im.jpg" alt="Flowers in Chania">
  
